parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LLLAVE
    RLLAVE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> sentencias
Rule 2     sentencias -> bloque_sentencia sentencias
Rule 3     sentencias -> empty
Rule 4     bloque_sentencia -> sentencia NEWLINE
Rule 5     bloque_sentencia -> sentencia
Rule 6     bloque_sentencia -> NEWLINE
Rule 7     sentencia -> declaracion_variable
Rule 8     sentencia -> asignacion
Rule 9     sentencia -> sentencia_if
Rule 10    sentencia -> sentencia_while
Rule 11    sentencia -> entrada_salida
Rule 12    sentencia -> funcion
Rule 13    sentencia -> error NEWLINE
Rule 14    empty -> <empty>
Rule 15    declaracion_variable -> tipo ID
Rule 16    declaracion_variable -> tipo ID EQ expresion
Rule 17    asignacion -> ID EQ expresion
Rule 18    tipo -> KW_INT
Rule 19    tipo -> KW_FLOAT
Rule 20    tipo -> KW_STRING
Rule 21    tipo -> KW_BOOL
Rule 22    sentencia_if -> KW_IF expresion_booleana PUNTOPUNTO bloque
Rule 23    sentencia_if -> KW_IF expresion_booleana PUNTOPUNTO bloque KW_ELSE PUNTOPUNTO bloque
Rule 24    sentencia_while -> KW_WHILE expresion_booleana PUNTOPUNTO bloque
Rule 25    funcion -> KW_FUNC ID LPARENTESIS parametros RPARENTESIS PUNTOPUNTO bloque
Rule 26    parametros -> tipo ID
Rule 27    parametros -> tipo ID COMA parametros
Rule 28    parametros -> empty
Rule 29    argumentos -> expresion
Rule 30    argumentos -> expresion COMA argumentos
Rule 31    argumentos -> empty
Rule 32    bloque -> NEWLINE INDENT sentencias DEDENT
Rule 33    bloque -> INDENT sentencias DEDENT
Rule 34    entrada_salida -> KW_READ LPARENTESIS ID RPARENTESIS
Rule 35    entrada_salida -> KW_WRITE LPARENTESIS expresion RPARENTESIS
Rule 36    expresion_booleana -> expresion_booleana AND expresion_booleana
Rule 37    expresion_booleana -> expresion_booleana OR expresion_booleana
Rule 38    expresion_booleana -> NOT expresion_booleana
Rule 39    expresion_booleana -> expresion operador_relacional expresion
Rule 40    expresion_booleana -> BOOL
Rule 41    expresion_booleana -> LPARENTESIS expresion_booleana RPARENTESIS
Rule 42    operador_relacional -> LT
Rule 43    operador_relacional -> GT
Rule 44    operador_relacional -> LE
Rule 45    operador_relacional -> GE
Rule 46    operador_relacional -> EQEQ
Rule 47    operador_relacional -> NE
Rule 48    expresion -> expresion PLUS termino
Rule 49    expresion -> expresion MINUS termino
Rule 50    expresion -> termino
Rule 51    termino -> termino STAR factor
Rule 52    termino -> termino SLASH factor
Rule 53    termino -> termino MOD factor
Rule 54    termino -> factor
Rule 55    factor -> ID
Rule 56    factor -> ENTERO
Rule 57    factor -> FLOTANTE
Rule 58    factor -> CADENA
Rule 59    factor -> LPARENTESIS expresion RPARENTESIS
Rule 60    factor -> ID LPARENTESIS argumentos RPARENTESIS

Terminals, with rules where they appear

AND                  : 36
BOOL                 : 40
CADENA               : 58
COMA                 : 27 30
DEDENT               : 32 33
ENTERO               : 56
EQ                   : 16 17
EQEQ                 : 46
FLOTANTE             : 57
GE                   : 45
GT                   : 43
ID                   : 15 16 17 25 26 27 34 55 60
INDENT               : 32 33
KW_BOOL              : 21
KW_ELSE              : 23
KW_FLOAT             : 19
KW_FUNC              : 25
KW_IF                : 22 23
KW_INT               : 18
KW_READ              : 34
KW_STRING            : 20
KW_WHILE             : 24
KW_WRITE             : 35
LE                   : 44
LLLAVE               : 
LPARENTESIS          : 25 34 35 41 59 60
LT                   : 42
MINUS                : 49
MOD                  : 53
NE                   : 47
NEWLINE              : 4 6 13 32
NOT                  : 38
OR                   : 37
PLUS                 : 48
PUNTOPUNTO           : 22 23 23 24 25
RLLAVE               : 
RPARENTESIS          : 25 34 35 41 59 60
SLASH                : 52
STAR                 : 51
error                : 13

Nonterminals, with rules where they appear

argumentos           : 30 60
asignacion           : 8
bloque               : 22 23 23 24 25
bloque_sentencia     : 2
declaracion_variable : 7
empty                : 3 28 31
entrada_salida       : 11
expresion            : 16 17 29 30 35 39 39 48 49 59
expresion_booleana   : 22 23 24 36 36 37 37 38 41
factor               : 51 52 53 54
funcion              : 12
operador_relacional  : 39
parametros           : 25 27
programa             : 0
sentencia            : 4 5
sentencia_if         : 9
sentencia_while      : 10
sentencias           : 1 2 32 33
termino              : 48 49 50 51 52 53
tipo                 : 15 16 26 27

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . sentencias
    (2) sentencias -> . bloque_sentencia sentencias
    (3) sentencias -> . empty
    (4) bloque_sentencia -> . sentencia NEWLINE
    (5) bloque_sentencia -> . sentencia
    (6) bloque_sentencia -> . NEWLINE
    (14) empty -> .
    (7) sentencia -> . declaracion_variable
    (8) sentencia -> . asignacion
    (9) sentencia -> . sentencia_if
    (10) sentencia -> . sentencia_while
    (11) sentencia -> . entrada_salida
    (12) sentencia -> . funcion
    (13) sentencia -> . error NEWLINE
    (15) declaracion_variable -> . tipo ID
    (16) declaracion_variable -> . tipo ID EQ expresion
    (17) asignacion -> . ID EQ expresion
    (22) sentencia_if -> . KW_IF expresion_booleana PUNTOPUNTO bloque
    (23) sentencia_if -> . KW_IF expresion_booleana PUNTOPUNTO bloque KW_ELSE PUNTOPUNTO bloque
    (24) sentencia_while -> . KW_WHILE expresion_booleana PUNTOPUNTO bloque
    (34) entrada_salida -> . KW_READ LPARENTESIS ID RPARENTESIS
    (35) entrada_salida -> . KW_WRITE LPARENTESIS expresion RPARENTESIS
    (25) funcion -> . KW_FUNC ID LPARENTESIS parametros RPARENTESIS PUNTOPUNTO bloque
    (18) tipo -> . KW_INT
    (19) tipo -> . KW_FLOAT
    (20) tipo -> . KW_STRING
    (21) tipo -> . KW_BOOL

    NEWLINE         shift and go to state 6
    $end            reduce using rule 14 (empty -> .)
    error           shift and go to state 13
    ID              shift and go to state 15
    KW_IF           shift and go to state 16
    KW_WHILE        shift and go to state 17
    KW_READ         shift and go to state 18
    KW_WRITE        shift and go to state 19
    KW_FUNC         shift and go to state 20
    KW_INT          shift and go to state 21
    KW_FLOAT        shift and go to state 22
    KW_STRING       shift and go to state 23
    KW_BOOL         shift and go to state 24

    programa                       shift and go to state 1
    sentencias                     shift and go to state 2
    bloque_sentencia               shift and go to state 3
    empty                          shift and go to state 4
    sentencia                      shift and go to state 5
    declaracion_variable           shift and go to state 7
    asignacion                     shift and go to state 8
    sentencia_if                   shift and go to state 9
    sentencia_while                shift and go to state 10
    entrada_salida                 shift and go to state 11
    funcion                        shift and go to state 12
    tipo                           shift and go to state 14

state 1

    (0) S' -> programa .



state 2

    (1) programa -> sentencias .

    $end            reduce using rule 1 (programa -> sentencias .)


state 3

    (2) sentencias -> bloque_sentencia . sentencias
    (2) sentencias -> . bloque_sentencia sentencias
    (3) sentencias -> . empty
    (4) bloque_sentencia -> . sentencia NEWLINE
    (5) bloque_sentencia -> . sentencia
    (6) bloque_sentencia -> . NEWLINE
    (14) empty -> .
    (7) sentencia -> . declaracion_variable
    (8) sentencia -> . asignacion
    (9) sentencia -> . sentencia_if
    (10) sentencia -> . sentencia_while
    (11) sentencia -> . entrada_salida
    (12) sentencia -> . funcion
    (13) sentencia -> . error NEWLINE
    (15) declaracion_variable -> . tipo ID
    (16) declaracion_variable -> . tipo ID EQ expresion
    (17) asignacion -> . ID EQ expresion
    (22) sentencia_if -> . KW_IF expresion_booleana PUNTOPUNTO bloque
    (23) sentencia_if -> . KW_IF expresion_booleana PUNTOPUNTO bloque KW_ELSE PUNTOPUNTO bloque
    (24) sentencia_while -> . KW_WHILE expresion_booleana PUNTOPUNTO bloque
    (34) entrada_salida -> . KW_READ LPARENTESIS ID RPARENTESIS
    (35) entrada_salida -> . KW_WRITE LPARENTESIS expresion RPARENTESIS
    (25) funcion -> . KW_FUNC ID LPARENTESIS parametros RPARENTESIS PUNTOPUNTO bloque
    (18) tipo -> . KW_INT
    (19) tipo -> . KW_FLOAT
    (20) tipo -> . KW_STRING
    (21) tipo -> . KW_BOOL

    NEWLINE         shift and go to state 6
    $end            reduce using rule 14 (empty -> .)
    DEDENT          reduce using rule 14 (empty -> .)
    error           shift and go to state 13
    ID              shift and go to state 15
    KW_IF           shift and go to state 16
    KW_WHILE        shift and go to state 17
    KW_READ         shift and go to state 18
    KW_WRITE        shift and go to state 19
    KW_FUNC         shift and go to state 20
    KW_INT          shift and go to state 21
    KW_FLOAT        shift and go to state 22
    KW_STRING       shift and go to state 23
    KW_BOOL         shift and go to state 24

    bloque_sentencia               shift and go to state 3
    sentencias                     shift and go to state 25
    empty                          shift and go to state 4
    sentencia                      shift and go to state 5
    declaracion_variable           shift and go to state 7
    asignacion                     shift and go to state 8
    sentencia_if                   shift and go to state 9
    sentencia_while                shift and go to state 10
    entrada_salida                 shift and go to state 11
    funcion                        shift and go to state 12
    tipo                           shift and go to state 14

state 4

    (3) sentencias -> empty .

    $end            reduce using rule 3 (sentencias -> empty .)
    DEDENT          reduce using rule 3 (sentencias -> empty .)


state 5

    (4) bloque_sentencia -> sentencia . NEWLINE
    (5) bloque_sentencia -> sentencia .

  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 26
    error           reduce using rule 5 (bloque_sentencia -> sentencia .)
    ID              reduce using rule 5 (bloque_sentencia -> sentencia .)
    KW_IF           reduce using rule 5 (bloque_sentencia -> sentencia .)
    KW_WHILE        reduce using rule 5 (bloque_sentencia -> sentencia .)
    KW_READ         reduce using rule 5 (bloque_sentencia -> sentencia .)
    KW_WRITE        reduce using rule 5 (bloque_sentencia -> sentencia .)
    KW_FUNC         reduce using rule 5 (bloque_sentencia -> sentencia .)
    KW_INT          reduce using rule 5 (bloque_sentencia -> sentencia .)
    KW_FLOAT        reduce using rule 5 (bloque_sentencia -> sentencia .)
    KW_STRING       reduce using rule 5 (bloque_sentencia -> sentencia .)
    KW_BOOL         reduce using rule 5 (bloque_sentencia -> sentencia .)
    $end            reduce using rule 5 (bloque_sentencia -> sentencia .)
    DEDENT          reduce using rule 5 (bloque_sentencia -> sentencia .)

  ! NEWLINE         [ reduce using rule 5 (bloque_sentencia -> sentencia .) ]


state 6

    (6) bloque_sentencia -> NEWLINE .

    NEWLINE         reduce using rule 6 (bloque_sentencia -> NEWLINE .)
    error           reduce using rule 6 (bloque_sentencia -> NEWLINE .)
    ID              reduce using rule 6 (bloque_sentencia -> NEWLINE .)
    KW_IF           reduce using rule 6 (bloque_sentencia -> NEWLINE .)
    KW_WHILE        reduce using rule 6 (bloque_sentencia -> NEWLINE .)
    KW_READ         reduce using rule 6 (bloque_sentencia -> NEWLINE .)
    KW_WRITE        reduce using rule 6 (bloque_sentencia -> NEWLINE .)
    KW_FUNC         reduce using rule 6 (bloque_sentencia -> NEWLINE .)
    KW_INT          reduce using rule 6 (bloque_sentencia -> NEWLINE .)
    KW_FLOAT        reduce using rule 6 (bloque_sentencia -> NEWLINE .)
    KW_STRING       reduce using rule 6 (bloque_sentencia -> NEWLINE .)
    KW_BOOL         reduce using rule 6 (bloque_sentencia -> NEWLINE .)
    $end            reduce using rule 6 (bloque_sentencia -> NEWLINE .)
    DEDENT          reduce using rule 6 (bloque_sentencia -> NEWLINE .)


state 7

    (7) sentencia -> declaracion_variable .

    NEWLINE         reduce using rule 7 (sentencia -> declaracion_variable .)
    error           reduce using rule 7 (sentencia -> declaracion_variable .)
    ID              reduce using rule 7 (sentencia -> declaracion_variable .)
    KW_IF           reduce using rule 7 (sentencia -> declaracion_variable .)
    KW_WHILE        reduce using rule 7 (sentencia -> declaracion_variable .)
    KW_READ         reduce using rule 7 (sentencia -> declaracion_variable .)
    KW_WRITE        reduce using rule 7 (sentencia -> declaracion_variable .)
    KW_FUNC         reduce using rule 7 (sentencia -> declaracion_variable .)
    KW_INT          reduce using rule 7 (sentencia -> declaracion_variable .)
    KW_FLOAT        reduce using rule 7 (sentencia -> declaracion_variable .)
    KW_STRING       reduce using rule 7 (sentencia -> declaracion_variable .)
    KW_BOOL         reduce using rule 7 (sentencia -> declaracion_variable .)
    $end            reduce using rule 7 (sentencia -> declaracion_variable .)
    DEDENT          reduce using rule 7 (sentencia -> declaracion_variable .)


state 8

    (8) sentencia -> asignacion .

    NEWLINE         reduce using rule 8 (sentencia -> asignacion .)
    error           reduce using rule 8 (sentencia -> asignacion .)
    ID              reduce using rule 8 (sentencia -> asignacion .)
    KW_IF           reduce using rule 8 (sentencia -> asignacion .)
    KW_WHILE        reduce using rule 8 (sentencia -> asignacion .)
    KW_READ         reduce using rule 8 (sentencia -> asignacion .)
    KW_WRITE        reduce using rule 8 (sentencia -> asignacion .)
    KW_FUNC         reduce using rule 8 (sentencia -> asignacion .)
    KW_INT          reduce using rule 8 (sentencia -> asignacion .)
    KW_FLOAT        reduce using rule 8 (sentencia -> asignacion .)
    KW_STRING       reduce using rule 8 (sentencia -> asignacion .)
    KW_BOOL         reduce using rule 8 (sentencia -> asignacion .)
    $end            reduce using rule 8 (sentencia -> asignacion .)
    DEDENT          reduce using rule 8 (sentencia -> asignacion .)


state 9

    (9) sentencia -> sentencia_if .

    NEWLINE         reduce using rule 9 (sentencia -> sentencia_if .)
    error           reduce using rule 9 (sentencia -> sentencia_if .)
    ID              reduce using rule 9 (sentencia -> sentencia_if .)
    KW_IF           reduce using rule 9 (sentencia -> sentencia_if .)
    KW_WHILE        reduce using rule 9 (sentencia -> sentencia_if .)
    KW_READ         reduce using rule 9 (sentencia -> sentencia_if .)
    KW_WRITE        reduce using rule 9 (sentencia -> sentencia_if .)
    KW_FUNC         reduce using rule 9 (sentencia -> sentencia_if .)
    KW_INT          reduce using rule 9 (sentencia -> sentencia_if .)
    KW_FLOAT        reduce using rule 9 (sentencia -> sentencia_if .)
    KW_STRING       reduce using rule 9 (sentencia -> sentencia_if .)
    KW_BOOL         reduce using rule 9 (sentencia -> sentencia_if .)
    $end            reduce using rule 9 (sentencia -> sentencia_if .)
    DEDENT          reduce using rule 9 (sentencia -> sentencia_if .)


state 10

    (10) sentencia -> sentencia_while .

    NEWLINE         reduce using rule 10 (sentencia -> sentencia_while .)
    error           reduce using rule 10 (sentencia -> sentencia_while .)
    ID              reduce using rule 10 (sentencia -> sentencia_while .)
    KW_IF           reduce using rule 10 (sentencia -> sentencia_while .)
    KW_WHILE        reduce using rule 10 (sentencia -> sentencia_while .)
    KW_READ         reduce using rule 10 (sentencia -> sentencia_while .)
    KW_WRITE        reduce using rule 10 (sentencia -> sentencia_while .)
    KW_FUNC         reduce using rule 10 (sentencia -> sentencia_while .)
    KW_INT          reduce using rule 10 (sentencia -> sentencia_while .)
    KW_FLOAT        reduce using rule 10 (sentencia -> sentencia_while .)
    KW_STRING       reduce using rule 10 (sentencia -> sentencia_while .)
    KW_BOOL         reduce using rule 10 (sentencia -> sentencia_while .)
    $end            reduce using rule 10 (sentencia -> sentencia_while .)
    DEDENT          reduce using rule 10 (sentencia -> sentencia_while .)


state 11

    (11) sentencia -> entrada_salida .

    NEWLINE         reduce using rule 11 (sentencia -> entrada_salida .)
    error           reduce using rule 11 (sentencia -> entrada_salida .)
    ID              reduce using rule 11 (sentencia -> entrada_salida .)
    KW_IF           reduce using rule 11 (sentencia -> entrada_salida .)
    KW_WHILE        reduce using rule 11 (sentencia -> entrada_salida .)
    KW_READ         reduce using rule 11 (sentencia -> entrada_salida .)
    KW_WRITE        reduce using rule 11 (sentencia -> entrada_salida .)
    KW_FUNC         reduce using rule 11 (sentencia -> entrada_salida .)
    KW_INT          reduce using rule 11 (sentencia -> entrada_salida .)
    KW_FLOAT        reduce using rule 11 (sentencia -> entrada_salida .)
    KW_STRING       reduce using rule 11 (sentencia -> entrada_salida .)
    KW_BOOL         reduce using rule 11 (sentencia -> entrada_salida .)
    $end            reduce using rule 11 (sentencia -> entrada_salida .)
    DEDENT          reduce using rule 11 (sentencia -> entrada_salida .)


state 12

    (12) sentencia -> funcion .

    NEWLINE         reduce using rule 12 (sentencia -> funcion .)
    error           reduce using rule 12 (sentencia -> funcion .)
    ID              reduce using rule 12 (sentencia -> funcion .)
    KW_IF           reduce using rule 12 (sentencia -> funcion .)
    KW_WHILE        reduce using rule 12 (sentencia -> funcion .)
    KW_READ         reduce using rule 12 (sentencia -> funcion .)
    KW_WRITE        reduce using rule 12 (sentencia -> funcion .)
    KW_FUNC         reduce using rule 12 (sentencia -> funcion .)
    KW_INT          reduce using rule 12 (sentencia -> funcion .)
    KW_FLOAT        reduce using rule 12 (sentencia -> funcion .)
    KW_STRING       reduce using rule 12 (sentencia -> funcion .)
    KW_BOOL         reduce using rule 12 (sentencia -> funcion .)
    $end            reduce using rule 12 (sentencia -> funcion .)
    DEDENT          reduce using rule 12 (sentencia -> funcion .)


state 13

    (13) sentencia -> error . NEWLINE

    NEWLINE         shift and go to state 27


state 14

    (15) declaracion_variable -> tipo . ID
    (16) declaracion_variable -> tipo . ID EQ expresion

    ID              shift and go to state 28


state 15

    (17) asignacion -> ID . EQ expresion

    EQ              shift and go to state 29


state 16

    (22) sentencia_if -> KW_IF . expresion_booleana PUNTOPUNTO bloque
    (23) sentencia_if -> KW_IF . expresion_booleana PUNTOPUNTO bloque KW_ELSE PUNTOPUNTO bloque
    (36) expresion_booleana -> . expresion_booleana AND expresion_booleana
    (37) expresion_booleana -> . expresion_booleana OR expresion_booleana
    (38) expresion_booleana -> . NOT expresion_booleana
    (39) expresion_booleana -> . expresion operador_relacional expresion
    (40) expresion_booleana -> . BOOL
    (41) expresion_booleana -> . LPARENTESIS expresion_booleana RPARENTESIS
    (48) expresion -> . expresion PLUS termino
    (49) expresion -> . expresion MINUS termino
    (50) expresion -> . termino
    (51) termino -> . termino STAR factor
    (52) termino -> . termino SLASH factor
    (53) termino -> . termino MOD factor
    (54) termino -> . factor
    (55) factor -> . ID
    (56) factor -> . ENTERO
    (57) factor -> . FLOTANTE
    (58) factor -> . CADENA
    (59) factor -> . LPARENTESIS expresion RPARENTESIS
    (60) factor -> . ID LPARENTESIS argumentos RPARENTESIS

    NOT             shift and go to state 31
    BOOL            shift and go to state 33
    LPARENTESIS     shift and go to state 34
    ID              shift and go to state 37
    ENTERO          shift and go to state 38
    FLOTANTE        shift and go to state 39
    CADENA          shift and go to state 40

    expresion_booleana             shift and go to state 30
    expresion                      shift and go to state 32
    termino                        shift and go to state 35
    factor                         shift and go to state 36

state 17

    (24) sentencia_while -> KW_WHILE . expresion_booleana PUNTOPUNTO bloque
    (36) expresion_booleana -> . expresion_booleana AND expresion_booleana
    (37) expresion_booleana -> . expresion_booleana OR expresion_booleana
    (38) expresion_booleana -> . NOT expresion_booleana
    (39) expresion_booleana -> . expresion operador_relacional expresion
    (40) expresion_booleana -> . BOOL
    (41) expresion_booleana -> . LPARENTESIS expresion_booleana RPARENTESIS
    (48) expresion -> . expresion PLUS termino
    (49) expresion -> . expresion MINUS termino
    (50) expresion -> . termino
    (51) termino -> . termino STAR factor
    (52) termino -> . termino SLASH factor
    (53) termino -> . termino MOD factor
    (54) termino -> . factor
    (55) factor -> . ID
    (56) factor -> . ENTERO
    (57) factor -> . FLOTANTE
    (58) factor -> . CADENA
    (59) factor -> . LPARENTESIS expresion RPARENTESIS
    (60) factor -> . ID LPARENTESIS argumentos RPARENTESIS

    NOT             shift and go to state 31
    BOOL            shift and go to state 33
    LPARENTESIS     shift and go to state 34
    ID              shift and go to state 37
    ENTERO          shift and go to state 38
    FLOTANTE        shift and go to state 39
    CADENA          shift and go to state 40

    expresion_booleana             shift and go to state 41
    expresion                      shift and go to state 32
    termino                        shift and go to state 35
    factor                         shift and go to state 36

state 18

    (34) entrada_salida -> KW_READ . LPARENTESIS ID RPARENTESIS

    LPARENTESIS     shift and go to state 42


state 19

    (35) entrada_salida -> KW_WRITE . LPARENTESIS expresion RPARENTESIS

    LPARENTESIS     shift and go to state 43


state 20

    (25) funcion -> KW_FUNC . ID LPARENTESIS parametros RPARENTESIS PUNTOPUNTO bloque

    ID              shift and go to state 44


state 21

    (18) tipo -> KW_INT .

    ID              reduce using rule 18 (tipo -> KW_INT .)


state 22

    (19) tipo -> KW_FLOAT .

    ID              reduce using rule 19 (tipo -> KW_FLOAT .)


state 23

    (20) tipo -> KW_STRING .

    ID              reduce using rule 20 (tipo -> KW_STRING .)


state 24

    (21) tipo -> KW_BOOL .

    ID              reduce using rule 21 (tipo -> KW_BOOL .)


state 25

    (2) sentencias -> bloque_sentencia sentencias .

    $end            reduce using rule 2 (sentencias -> bloque_sentencia sentencias .)
    DEDENT          reduce using rule 2 (sentencias -> bloque_sentencia sentencias .)


state 26

    (4) bloque_sentencia -> sentencia NEWLINE .
